Revision history for DBIx-Perlish

NEXT
       Comparisons with undefined values are converted into
       proper SQL syntax.

0.17  Tue Feb 20 10:26:21 2007
       Added autogrouping when aggregates were seen in the return statement.

0.16  Fri Feb 16 21:49:06 2007
       Column descriptors can be embedded in strings.
       More tests.
       More docs.
       Pod coverage test fix.
       Added support for defined() as IS NOT NULL.
       Added support for tab->id  <-  @ary syntax.

0.15  Fri Feb 16 10:26:44 2007
       sql() is now prototyped.
       Implemented union {} and intersect {}.
       String concatenation is now supported.

0.14  Tue Feb 13 16:32:50 2007
       Added post-if parse-time simple conditionals.
       Added interpolation of scalars in regular expresions.
       Added special handling of sysdate() in Oracle.
       Verbatim sql() in inserts.
       Verbatim sql() in query subs.
       Support expressions in return statements.

0.13  Fri Feb  9 12:28:20 2007
       Added an ability to return complete table (tab.*).
       Added two ways to specify table names at run-time.
       Added an ability to use $hash{const} and $hash->{const} as values.
       More tests.
       More docs.

0.12  Wed Feb  7 13:24:19 2007
       Documentation and makefile cleanup.

0.11  Wed Feb  7 12:38:38 2007
       Sub-queries can refer to tables in the outer scope.
       Translate "lc" and "uc" to "lower" and "upper", respectively.
       Added support to EXISTS-style sub-queries.
       Added support for SELECT DISTINCT.
       Added support for special labels syntax.

0.10  Tue Feb  6 09:46:58 2007
       Added support for simple funcalls.
       PadWalker module is now optional.
       Terms can stand by themselves.

0.09  Mon Feb  5 14:27:52 2007
       Added db_update().

0.08  Mon Feb  5 12:16:22 2007
       Added support of subselects on threaded perls.
       Regexes on older versions of SQLite made to work.
       Implemented db_insert().
