@@ -176,7 +176,7 @@ sub get_value
 		$val = $vv->{$key};
 	} else {
 		return () if $p{soft};
-		bailout $S, "cannot parse this as a value or value reference";
+		bailout $S, "cannot parse \"", $op->name, "\" op as a value or value reference";
 	}
 	return ($val, 1);
 }
@@ -916,20 +916,7 @@ sub parse_complex_regex
 		;
 	} elsif ( is_svop( $op, 'const')) {
 		return want_const( $S, $op);
-	} elsif ( is_op( $op, 'padsv') or is_padop( $op, 'gvsv')) {
-		if (find_aliased_tab($S, $op)) {
-			bailout $S, "cannot use a table variable as a value";
-		}
-		my $gv = ref($op) eq 'B::PADOP';
-		my $ix = $gv ? $op-> padix : $op-> targ;
-		my $rx = ${ $S->{padlist}->[1]->ARRAYelt( $ix)->object_2svref };
-		bailout $S, "something bad happened: embedded regex scalar cannot be accessed" 
-			unless defined $rx;
-		if ( $gv) {
-			$rx = $$rx;
-			bailout $S, "something bad happened: embedded regex scalar cannot be accessed" 
-				unless defined $rx;
-		}
+	} elsif (my ($rx, $ok) = get_value($S, $op, soft => 1)) {
 		$rx =~ s/^\(\?\-\w*\:(.*)\)$/$1/; # (?-xism:moo) -> moo
 		return $rx;
 	} else {
